@@ -1,3 +1,8 @@
+Sun Oct 19 15:59:19 UTC 2008 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/Mesher.java: Fix NullPointerException when
+	converting to triangle soup without running other passes first.
+
 Mon Jun 23 18:01:40 CEST 2008 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/patch/Vertex2D.java: Rename inCircleTest2()
